<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Calulator</string>
    <string name="app_overview">Today</string>
    <string name="app_history">History</string>
    <string name="app_new">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="notify">Are you tracking your expenses today?</string>

    <!-- Add Item Strings -->
    <string name="title_edit">Edit</string>
    <string name="total">0.0</string>
    <string name="title_week">This Week</string>

    <!-- New Item Strings -->
    <string name="new_trans_title">New Transaction</string>
    <string name="hint_item">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Note - Optional</string>
    <string name="hint_category">Category</string>
    <string name="prompt_spinner">Select Category new</string>
    <string name="btn_save">Save</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>

    <!-- ActionBar Items -->
    <string name="action_shopping">Shopping List</string>
    <string name="action_budget">Allocate Budget</string>
    <string name="action_settings">Settings</string>

    <!-- No Data	Error Message -->
    <string name="no_item">Enter Item Name</string>
    <string name="no_price">Enter Item Price</string>
    <string name="no_description">Enter A Short Description For Item</string>
    <string name="no_category">Select A Category</string>

    <!-- Category Names -->
    <string name="cat_default">Select Category</string>
    <string name="cat_auto">Auto/Bus/Train</string>
    <string name="cat_bill">Bill Payments</string>
    <string name="cat_book">Books/Stationary</string>
    <string name="cat_cloth">Clothing</string>
    <string name="cat_electronic">Electronics</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_gift">Gifts</string>
    <string name="cat_medical">Medical</string>
    <string name="cat_personal">Personal Care</string>
    <string name="cat_recharge">Recharge</string>
    <string name="cat_travel">Travel</string>
    <string name="cat_others">Miscellaneous</string>

    <!-- Category Images -->
    <string name="img_auto">blue_sphere</string>
    <string name="img_cat_bill">Bill Payments</string>
    <string name="img_cat_book">Books/Stationary</string>
    <string name="img_cat_cloth">Clothing</string>
    <string name="img_cat_electronic">Electronics</string>
    <string name="img_cat_entertainment">Entertainment</string>
    <string name="img_cat_food">Food</string>
    <string name="img_cat_gift">Gifts</string>
    <string name="img_cat_medical">Medical</string>
    <string name="img_cat_personal">Personal Care</string>
    <string name="img_cat_recharge">Recharge</string>
    <string name="img_cat_travel">Travel</string>
    <string name="img_cat_others">Miscellaneous</string>

    <!-- Option Menu Dialogs -->
    <string name="shoping_title">Add Event</string>
    <string name="shoping_msg">Add a shopping event to my calendar</string>
    <string name="shoping_positive">Add</string>
    <string name="shoping_negative">Cancel</string>
    <string name="category_title">Edit Category</string>
    <string name="category_hint">New Title</string>
    <string name="category_positive">Save</string>
    <string name="category_negative">Cancel</string>

    <!-- Todays Expense Fragment -->
    <string name="todays_title">Today\'s Expense </string>
    <string name="no_expense">No Expenses Done Today!</string>
    <string name="no_history">No History Found!</string>

    <!-- Context Menu -->
    <string name="context_delete">Delete</string>
    <string name="context_edit">Edit</string>

    <!-- Currency -->
    <string name="cur_ruppee">₹</string>
    <string name="cur_dollar">$</string>
    <string name="cur_pound">£</string>
    <string name="cur_yen">¥</string>
    <string name="cur_euro">€</string>
    <string name="cur_yuan">元</string>
    <string name="alarm_on">ON</string>
    <string name="alarm_off">OFF</string>
    <string name="alarm_default">13:30</string>
    <string name="cur_custom_hint">Custom</string>

    <!-- Grouping -->
    <string name="group_week">Weekly</string>
    <string name="group_month">Monthly</string>
    <string name="group_year">Yearly</string>

    <!-- Preferences -->
    <string name="settings_title">Settings</string>
    <string name="settings_header_general">General Settings</string>
    <string name="settings_header_about">About</string>
    <string name="settings_header_alarm">Alarm</string>
    <string name="settings_item_currency">Currency</string>
    <string name="settings_item_Grouping">Sorting</string>
    <string name="settings_item_reminder">Daily Reminder</string>
    <string name="settings_item_time">Set Time</string>
    <string name="settings_item_about">About Us</string>
    <string name="settings_item_rate">Rate Us</string>
    <string name="settings_item_feedback">Feedback</string>

</resources>