<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/hint_item"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_black_87" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/hint_category"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_black_87" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/hint_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_dark_blue" />

</LinearLayout>