<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtHeaderSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings_header_general"
            android:textColor="@color/color_black_87"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black_26" />

        <LinearLayout
            android:id="@+id/linearCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/txtCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/settings_item_currency"
                android:textColor="@drawable/selector_btn_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCurrencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@drawable/selector_btn_text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_12" />

        <LinearLayout
            android:id="@+id/linearGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/txtGrouping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/settings_item_Grouping"
                android:textColor="@drawable/selector_btn_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtGroupingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@drawable/selector_btn_text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtHeaderAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings_header_alarm"
            android:textColor="@color/color_black_87"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black_26" />

        <CheckedTextView
            android:id="@+id/txtReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/settings_item_reminder"
            android:textColor="@drawable/selector_btn_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_12" />

        <LinearLayout
            android:id="@+id/linearTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/settings_item_time"
                android:textColor="@color/color_black_87"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/color_black_87"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtHeaderAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings_header_about"
            android:textColor="@color/color_black_87"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black_26" />

        <TextView
            android:id="@+id/txtAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/settings_item_about"
            android:textColor="@drawable/selector_btn_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_12" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/settings_item_rate"
            android:textColor="@drawable/selector_btn_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_12" />

        <TextView
            android:id="@+id/txtFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:text="@string/settings_item_feedback"
            android:textColor="@drawable/selector_btn_text_color"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>