<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearParent"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:padding="8dp" >

    <ImageView
        android:id="@+id/imgCategory"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:gravity="center"
        android:src="@drawable/entertainment" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="7"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/txtItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/hint_item"
            android:textColor="@color/color_black_87"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/hint_category"
            android:textColor="@color/color_black_54"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/hint_price"
            android:textColor="@color/color_pink_price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|right"
            android:text="Small Text"
            android:textColor="@color/color_black_54"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>